# DioxusWithComponents

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  Tests.md  package-lock.json  tailwind.config.js
assets/: loading.css  tailwind-output.css  tailwind.css
lib/ui_core/: Cargo.toml
lib/ui_core/examples/: alert_showcase.rs  mod.rs
lib/ui_core/src/: app_layout.rs  lib.rs  range.rs  text_area.rs  tooltip.rs
lib/ui_core/src/accordion/: accordion.md  accordion.rs  mod.rs
lib/ui_core/src/alert/: alert.md  alert.rs  checklist.md  mod.rs  types.rs
lib/ui_core/src/application/: application.md
lib/ui_core/src/button/: button.md  button_showcase.rs  mod.rs
lib/ui_core/src/card/: types.rs
lib/ui_core/src/check_box/: check_box.md  check_box.rs  mod.rs  types.rs
lib/ui_core/src/drop_down/: drop_down.md  drop_down.rs  mod.rs  types.rs
lib/ui_core/src/input/: input.md  input.rs  input_showcase.rs  mod.rs  types.rs
lib/ui_core/src/modal/: mod.rs  modal.md  modal.rs  types.rs
lib/ui_core/src/select/: select.md
lib/ui_core/src/table/: table.md
lib/ui_core/src/toast/: toast.md
lib/ui_templates/: Cargo.toml
lib/ui_templates/src/: lib.rs  login.rs  navbar.rs  reset_password.rs
libs/components/: Cargo.toml  count.rs  guide_component.rs  layout.rs  loading.rs  mod.rs
libs/components/templates/: login.rs  o_auth.rs  register.rs
libs/components/ui/: mod.rs  select.rs  tab_container.rs  time_line.rs
libs/components/ui/alert/: alert_showcase.rs  types.rs
libs/components/ui/button/: types.rs
libs/components/ui/input/: input_showcase.rs  mod.rs  types.rs
libs/components/ui/marketing/: hero.rs
libs/ui-core/: Cargo.toml
libs/ui-core/src/: avatar.rs  lib.rs
libs/ui-core/src/accordion/: types.rs
libs/ui-core/src/alert/: mod.rs
libs/ui-core/src/card/: mod.rs
libs/ui-core/src/check_box/: check_box.rs
libs/ui-core/src/input/: input.rs
libs/ui-templates/: Cargo.toml
libs/ui-templates/src/: error.rs  lib.rs  sidebar.rs
src/: example.rs  lib.rs  main.rs
src/components/: AIPrompt.md  echo.rs  example.rs  guide_component.rs  hero.rs  layout.rs  mod.rs  navbar.rs  sidebar.rs
src/components/daisy_ui/: Adding.md  accordian.rs  accordion.rs  alert.rs  blank_slate.rs  button.rs  card.rs  drawer.rs  label.rs  mod.rs  modal.rs  relative_time.rs
src/components/templates/: confirmation.rs  login.rs  mod.rs  register.rs  settings.rs  terms_conditions.rs
src/components/ui/: check_box.rs  drop_down.rs  input.rs  mod.rs  nav_item.rs
src/components/ui/accordion/: accordion.rs  accordion_showcase.rs  mod.rs
src/components/ui/alert/: alert.rs  types.rs
src/components/ui/button/: button.rs  button_showcase.rs  mod.rs  types.rs
src/components/ui/card/: card.rs  card_showcase.rs  mod.rs  types.rs
src/components/ui/marketing/: team.rs
src/views/: about.rs  blog.rs  component_showcase.rs  contact.rs  guide_component.rs  home.rs  mod.rs
tests/components/: input.rs  mod.rs
