[package]
name = "learning"
version = "0.1.0"
authors = ["Youknowwho55 <dylan9112@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["router", "fullstack"] }
dioxus-fullstack = "0.6.3"
dioxus-html = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.40"
strum = "0.27"
strum_macros = "0.27"
log = "0.4.27"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
