[package]
name = "learning"
version = "0.1.0"
authors = ["Youknowwho55 <rayburncode@gmail.com>"]
edition = "2021"
description = "Main application using UI components"
license = "MIT"
repository = "https://github.com/Youknowwho55/DioxusWithComponents"

[workspace]
resolver = "2"  
members = [
    "lib/ui_core",
    "lib/ui_templates"
]

[dependencies]
# Internal crates
ui_core = { path = "lib/ui_core" }
ui_templates = { path = "lib/ui_templates" }

# Dioxus
dioxus = { version = "0.6.3", features = ["router", "fullstack"] }
dioxus-fullstack = "0.6.3"
dioxus-html = "0.6.3"

# Utilities
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.40"
log = "0.4.27"

[features]
default = ["desktop"]
web = [
    "dioxus/web",
    "ui_core/web",
]
desktop = [
    "dioxus/desktop",
    "ui_core/desktop"
]
mobile = ["dioxus/mobile"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.wasm-dev]
inherits = "dev"
opt-level = 1  # Better for WASM debugging

[profile.server-dev]
inherits = "dev"