[package]
name = "ui_core"
version = "0.1.0"
edition = "2021"
description = "Reusable UI components"
license = "MIT" 
repository = "https://github.com/Youknowwho55/DioxusWithComponents"
documentation = "https://docs.rs/ui-core"
keywords = ["dioxus", "ui", "components"]
categories = ["gui", "rendering"]

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
showcase = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]

[dependencies]
dioxus = { version = "0.6", features = ["html"] }
dioxus-html = "0.6"
serde = { version = "1.0", features = ["derive"], optional = true }
strum = { version = "0.27", features = ["derive"] }
log = "0.4"

[dev-dependencies]
dioxus-ssr = "0.6"
insta = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-web = "0.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus-desktop = "0.6"