[package]
name = "ui-templates"
version = "0.1.0"
edition = "2021"
description = "Page templates and compositions using ui-core components"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your/repo"
documentation = "https://docs.rs/ui-templates"

[lib]
name = "ui_template"  # Name used in imports
path = "src/lib.rs"  # Entry point
crate-type = ["rlib"]  # Compile as Rust library

[features]
default = []

[dependencies]
ui-core = { path = "../ui-core", features = ["web"] }  # Default to web
dioxus = { version = "0.6", features = ["router"] }
dioxus-router = "0.6"

# Template-specific dependencies
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
ui-core = { path = "../ui-core", features = ["showcase"] }  # For dev examples